<resources>
    <string name="app_name">mp5</string>
    <string name="start">start</string>
    <string name="right">right</string>
    <string name="wrong">wrong</string>
    <string name="practice">practice</string>
    <string name="end">end</string>
    <string name="done">done</string>
    <string name="please_keep_two_decimal_places">please keep two decimal places</string>
    <string name="your_answer">your answer</string>
    <string name="rightanswer">rightanswer</string>
</resources>
