<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/right"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:text="@string/right"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/wrong"
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:text="@string/wrong"
            android:visibility="invisible" />

        <Button
            android:id="@+id/practice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practice"
            android:visibility="invisible" />

        <Button
            android:id="@+id/end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@string/your_answer" />

        <TextView
            android:id="@+id/tip"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/please_keep_two_decimal_places" />

        <Button
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:visibility="visible" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>